Perform count query to have actual limit for query and stream response