@@ -84,9 +84,11 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
     @Value("${solr.operator:AND}")
     private String defaultOperator;
 
-    @Lazy
-    @Autowired
-    private SolrClient solrClient;
+    private final SolrClient solrClient;
+
+    public IndividualRepo(@Lazy SolrClient solrClient) {
+        this.solrClient = solrClient;
+    }
 
     @Override
     public long count(QueryArg query, List<FilterArg> filters) {
@@ -148,7 +150,7 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
             return response.getResults()
                 .stream()
                 .map(Individual::from)
-                .collect(Collectors.toList());
+                .toList();
         } catch (IOException | SolrServerException e) {
             throw new SolrRequestException("Failed to find documents from ids", e);
         }
@@ -187,7 +189,7 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
             List<Individual> individuals = response.getResults()
                 .stream()
                 .map(Individual::from)
-                .collect(Collectors.toList());
+                .toList();
 
             return DiscoveryFacetAndHighlightPage.from(
                 individuals,
@@ -204,14 +206,16 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
 
     @Override
     public Flux<Individual> export(QueryArg query, List<FilterArg> filters, List<BoostArg> boosts, Sort sort) {
+        long count = this.count(query, filters);
+
         SolrQueryBuilder builder = new SolrQueryBuilder()
             .withQuery(query)
             .withFilters(filters)
             .withBoosts(boosts)
             .withSort(sort)
-            .withRows(MAX_ROWS);
+            .withRows((int) count);
 
-        logger.info("{}: Exporting {} {} {} {}", builder.getId(), query, filters, boosts, sort);
+        logger.info("{}: Exporting {} individuals for {} {} {} {}", builder.getId(), count, query, filters, boosts, sort);
 
         return Flux.create(emitter -> {
             try {
@@ -384,14 +388,13 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
 
     private boolean validateAndCountDateField(DiscoveryNetwork dataNetwork, Object dateFieldFromDocument) {
         String year = null;
-        if (dateFieldFromDocument instanceof Date) {
-            Date publicationDate = (Date) dateFieldFromDocument;
+        if (dateFieldFromDocument instanceof Date publicationDate) {
             Calendar calendar = Calendar.getInstance();
             calendar.setTime(publicationDate);
             year = String.valueOf(calendar.get(Calendar.YEAR));
-        } else if (dateFieldFromDocument instanceof String) {
+        } else if (dateFieldFromDocument instanceof String publicationYear) {
             try {
-                year = DateFormatUtility.parseYear((String) dateFieldFromDocument);
+                year = DateFormatUtility.parseYear(publicationYear);
             } catch (Exception e) {
                 logger.warn("Unable to format {}. {}", year, e.getMessage());
                 if (logger.isDebugEnabled()) {
@@ -434,7 +437,7 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
             return solrClient.query(collectionName, query).getResults()
                 .stream()
                 .map(Individual::from)
-                .collect(Collectors.toList());
+                .toList();
         } catch (IOException | SolrServerException e) {
             throw new SolrRequestException("Failed to query documents", e);
         }
@@ -448,9 +451,9 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
                 .getResults()
                 .stream()
                 .map(Individual::from)
-                .collect(Collectors.toList());
+                .toList();
 
-            return new PageImpl<Individual>(individuals, pageable, documents.getNumFound());
+            return new PageImpl<>(individuals, pageable, documents.getNumFound());
         } catch (IOException | SolrServerException e) {
             throw new SolrRequestException("Failed to query documents", e);
         }
@@ -461,7 +464,7 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
             .filter(document::containsKey)
             .flatMap(v -> document.getFieldValues(v).stream())
             .map(v -> (String) v)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private class SolrQueryBuilder {
@@ -767,8 +770,7 @@ public class IndividualRepo implements IndexDocumentRepo<Individual> {
                     break;
                 case CONTAINS:
                     throw new UnsupportedOperationException("CONTAINS: Solr contains query not yet supported");
-                case EXPRESSION:
-                case RAW:
+                case RAW, EXPRESSION:
                     filterQuery
                         .append(value);
                     break;
